<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmarTerminal</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="app_welcome_text">欢迎登陆\n智能终端系统</string>
    <string name="remenber_login_name">记住用户名</string>
    <string name="remenber_login_password">记住密码</string>
    <string name="forget_password_text">忘记密码?</string>
    <string name="login_button_text">登  陆</string>
    <string name="login_username_hint_text">请输入用户名</string>
    <string name="login_password_hint_text">请输入密码</string>
    <string name="login_error_msg">用户名密码错误</string>
    <string name="title_activity_portal">PortalActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="portal_checkin_text">进料登记</string>
    <string name="portal_checkout_text">发料登记</string>
    <string name="portal_objectCheck_text">实物盘点</string>
    <string name="portal_dataUpload_text">数据上传</string>
    <string name="update_department_info_text">更新项目信息</string>
    <string name="app_setting_text">设   置</string>
    <string name="title_activity_app_setting">AppSettingActivity</string>
    <string name="return_text">返  回</string>

</resources>
