<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#1ABC9C">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6">

        <Space
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="9.5" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1"
            android:textAlignment="center"
            android:baselineAligned="false"
            android:layout_weight="9"
            android:gravity="center|top">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:src="@drawable/login_logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/app_welcome_text"
                android:id="@+id/textView"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textAlignment="center"
                android:gravity="center|top"
                android:paddingTop="15dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10.5"
            android:gravity="right">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2"
                android:src="@drawable/login_background_triangle_image"
                android:paddingTop="30dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="6">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView3"
                    android:src="@drawable/login_grey_background_shape" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_weight="1" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_weight="10">

                        <Space
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="3" />

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/login_input_background"
                            android:layout_weight="0.5">

                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/userNameInput"
                                android:layout_weight="1"
                                android:hint="@string/login_username_hint_text"
                                android:textColor="#ff282828" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/imageView4"
                                android:src="@drawable/login_user_icon" />
                        </LinearLayout>

                        <Space
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="3" />

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/login_input_background"
                            android:layout_weight="0.5">

                            <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/passwordInput"
                                android:layout_weight="1"
                                android:hint="@string/login_password_hint_text"
                                android:textColor="#ff282828"
                                android:password="true" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/imageView5"
                                android:src="@drawable/login_password_icon" />

                        </LinearLayout>

                        <Space
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2" />

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <CheckBox
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/remenber_login_name"
                                android:id="@+id/rememberNameCheckBox"
                                android:textColor="#ff5f5f5f" />

                            <CheckBox
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/remenber_login_password"
                                android:id="@+id/rememberPasswordCheckBox"
                                android:textColor="#ff5f5f5f" />
                        </LinearLayout>

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <Button
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/login_button_text"
                                android:id="@+id/loginButton"
                                android:background="@drawable/login_button_background"
                                android:clickable="true"
                                android:textSize="24sp" />

                        </LinearLayout>

                        <Space
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2" />

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAppearance="@android:style/TextAppearance.Medium"
                                android:text="@string/forget_password_text"
                                android:id="@+id/forgetPasswordText"
                                android:gravity="center"
                                android:singleLine="false"
                                android:textColor="#ff28acff" />
                        </LinearLayout>
                    </LinearLayout>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_weight="1" />

                </LinearLayout>

            </FrameLayout>

            <Space
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="10" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>