<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#EEEEEE"
    android:baselineAligned="true">

    <Space
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="2.5" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="2.3">

        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.18" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/portal_card_background"
                android:clickable="true"
                android:paddingRight="10dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView2"
                    android:src="@drawable/portal_card_checkin_image"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/portal_checkin_text"
                    android:id="@+id/textView"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:layout_alignParentTop="false"
                    android:layout_alignParentLeft="false" />
            </RelativeLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.21" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/portal_card_background"
                android:clickable="true"
                android:paddingRight="10dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView3"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/portal_checkout_text"
                    android:id="@+id/textView2"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />
            </RelativeLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.21" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/portal_card_background"
                android:clickable="true"
                android:paddingRight="10dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView4"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/portal_objectCheck_text"
                    android:id="@+id/textView3"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />
            </RelativeLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.21" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/portal_card_background"
                android:clickable="true"
                android:paddingRight="10dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView5"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/portal_dataUpload_text"
                    android:id="@+id/textView4"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />
            </RelativeLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.18" />
    </LinearLayout>

    <Space
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="2.8" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_weight="2.7">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/imageView"
            android:src="@drawable/portal_line" />
    </LinearLayout>

    <Space
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="2.8" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="2">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center|top"
            android:layout_weight="3">

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/update_department_info_text"
                    android:id="@+id/updateInfoButton"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    android:layout_weight="0.7"
                    android:background="@drawable/portal_button_background" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.2" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_setting_text"
                    android:id="@+id/appSettingButton"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    android:layout_weight="0.7"
                    android:background="@drawable/portal_button_background" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

    <Space
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="3" />
</LinearLayout>